[package]
name = "player"
version = "0.1.0"
authors = ["Ryan Wiedemann <Ryan1729@gmail.com>"]

[lib]
path = "src/player.rs"

[dependencies]
serde = "1"
serde_derive = "1"
bitflags = "0.7"
quickcheck = "0.6"
stdweb = "0.4"
project_common = { path = "../project_common" }

[dependencies.rendering]
path = "../rendering"

[dependencies.platform_types]
path = "../platform_types"

[dependencies.features]
path = "../features"

[features]
default = []
invariant-checking = ["features/invariant-checking"]
logging = ["features/logging"]

[profile.dev]
opt-level = 2
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
